Bug 416918 - "Default colour model for new images" is ignored
Summary: "Default colour model for new images" is ignored
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.2.8
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: lfausto
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2020-01-29 17:25 UTC by Mark Raynsford
Modified: 2021-02-18 08:03 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Raynsford 2020-01-29 17:25:38 UTC
SUMMARY

In Colour Management -> General, there's a setting to select the default colour model for new images. The standard Krita default appears to be "RGB/Alpha (8-bit integer/channel)". If you set this to, for example, "RGB/Alpha (16-bit float/channel)", this should be the new default for all new images. However, the setting appears to be ignored.

STEPS TO REPRODUCE
1. Set the default colour model to anything other than "RGB/Alpha (8-bit integer/channel)"
2. Save settings
3. Create a new image
4. Observe that the colour model is still set to "RGB/Alpha (8-bit integer/channel)"

OBSERVED RESULT

Here's a video that shows me selecting a 16-bit floating point colour model, and a linear display profile. Note that the display profile *is* respected, but the colour model isn't:

  https://ataxia.io7m.com/2020/01/29/krita_depth.mkv

EXPECTED RESULT

New images should have the correct colour model.

SOFTWARE/OS VERSIONS

Krita

 Version: 4.2.8
 Languages: en_GB
 Hidpi: true

Qt

  Version (compiled): 5.13.2
  Version (loaded): 5.14.0

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 5.4.15-arch1-1
  Pretty Productname: Arch Linux
  Product Type: arch
  Product Version: unknown

OpenGL Info
 
  Vendor:  "X.Org" 
  Renderer:  "AMD NAVI10 (DRM 3.35.0, 5.4.15-arch1-1, LLVM 9.0.1)" 
  Version:  "4.5 (Compatibility Profile) Mesa 19.3.2" 
  Shading language:  "4.50" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  Current format:    QSurfaceFormat(version 4.5, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
     Version: 4.5
     Supports deprecated functions true 
     is OpenGL ES: false 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsOpenGLES: true 
  isQtPreferOpenGLES: false 

Hardware Information

  GPU Acceleration: auto
  Memory: 32098 Mb
  Number of Cores: 12
  Swap Location: /tmp

Current Settings

	Current Swap Location: /tmp
	Undo Enabled: 1
	Undo Stack Limit: 30
	Use OpenGL: 1
	Use OpenGL Texture Buffer: 1
	Use AMD Vectorization Workaround: 0
	Canvas State: OPENGL_SUCCESS
	Autosave Interval: 900
	Use Backup Files: 1
	Number of Backups Kept: 1
	Backup File Suffix: ~
	Backup Location: Same Folder as the File
	Use Win8 Pointer Input: 0
	Use RightMiddleTabletButton Workaround: 0
	Levels of Detail Enabled: 0
	Use Zip64: 0


ADDITIONAL INFORMATION
Comment 1 Ahab Greybeard 2020-01-29 17:39:15 UTC
I can confirm this for the Jan 28th 4.3.0 prealpha appimage git(049dd11)
Comment 2 feyazabubaker 2020-02-22 23:52:40 UTC
Can confirm for Feb 23rd 4.3.0 prealpha appimage git(369d552). Changing the default at the new file screen doesn't affect the value stored in settings. Claiming bug.
Comment 3 Bug Janitor Service 2021-02-14 17:50:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/705
Comment 4 Dmitry Kazakov 2021-02-18 08:03:41 UTC
Git commit d41048ccc582bcfeef003969eaf8a0f8e59e5da9 by Dmitry Kazakov, on behalf of Santhosh Anguluri.
Committed on 18/02/2021 at 08:03.
Pushed by dkazakov into branch 'master'.

Fix "Default colour model for new images"

Before this commit, only working color space is changed
when default color model is changed. But that does not
change anything to the new image dialog. This MR provides
an option to use a default set color model or last used
color model using a checkbox.

Tested as follows:

1)Config Krita -> Color Management -> General ->
    Change default color model for new images(with checkbox checked).
2) Make a new image
3) The new default model and bitdepth appears.

M  +6    -3    libs/ui/KisDocument.cpp
M  +26   -2    libs/ui/dialogs/kis_dlg_preferences.cc
M  +1    -0    libs/ui/dialogs/kis_dlg_preferences.h
M  +32   -20   libs/ui/forms/wdgcolorsettings.ui
M  +10   -2    libs/ui/kis_config.cc
M  +2    -0    libs/ui/kis_config.h

https://invent.kde.org/graphics/krita/commit/d41048ccc582bcfeef003969eaf8a0f8e59e5da9