Fix "Default colour model for new images"

Before this commit, only working color space is changed
when default color model is changed. But that does not
change anything to the new image dialog. This MR provides
an option to use a default set color model or last used
color model using a checkbox.

Tested as follows:

1)Config Krita -> Color Management -> General ->
    Change default color model for new images(with checkbox checked).
2) Make a new image
3) The new default model and bitdepth appears.

BUG:416918