libs/ui/dialogs/kis_dlg_preferences.h
@@ -158,6 +158,7 @@ private Q_SLOTS:
     void refillMonitorProfiles(const KoID & s);
     void installProfile();
     void toggleAllowMonitorProfileSelection(bool useSystemProfile);
+    void toggleUseDefaultColorSpace(bool useDefColorSpace);
 
 public:
     void setDefault();
